--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # =============================================
   # BASE DE DONNÉES PRINCIPALE PMGL
@@ -25,7 +23,7 @@ services:
       retries: 5
 
   # =============================================
-  # KEYCLOAK - AUTHENTIFICATION
+  # BASE DE DONNÉES KEYCLOAK
   # =============================================
   keycloak_db:
     image: postgres:15
@@ -38,7 +36,15 @@ services:
       - keycloak_db_data:/var/lib/postgresql/data
     networks:
       - pmgl_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U keycloak -d keycloak"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
 
+  # =============================================
+  # KEYCLOAK - AUTHENTIFICATION
+  # =============================================
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.5
     container_name: pmgl_keycloak
