--- a/backend/pmgl-api/src/main/resources/application.yml
+++ b/backend/pmgl-api/src/main/resources/application.yml
@@ -64,3 +64,7 @@ logging:
     org.springframework.security: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+pmgl:
+  storage:
+    root: ${PMGL_STORAGE_ROOT:${user.home}/pmgl/uploads/quotes}
